tests/e2e/failing/declaration/parent.gt
Fatal error: exception Failure("parent/self is a keyword")
